--- a/JavaScript30/15 - LocalStorage/style.css
+++ b/JavaScript30/15 - LocalStorage/style.css
@@ -79,3 +79,16 @@ h2 {
   outline: 0;
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
+
+.check-all-container {
+  display: flex;
+  justify-content: start;
+}
+
+.check-all {
+  margin: 0 10px 0 0;
+}
+
+.uncheck-all {
+  margin: 0 10px 0 0;
+}
